--- a/components/common/styles/Common.scss
+++ b/components/common/styles/Common.scss
@@ -1,6 +1,9 @@
+@import "./bootstrap-4-grid.scss";
+
 body {
   margin: 0;
   font-family: "Nunito", sans-serif;
+  color: #374054;
 }
 
 .dark-layer {
@@ -20,4 +23,8 @@ body {
 .spacer {
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.text-center {
+  text-align: center;
 }
