--- a/components/common/styles/Common.scss
+++ b/components/common/styles/Common.scss
@@ -34,3 +34,7 @@ body {
 .row {
   margin: 0 !important;
 }
+
+.shadow {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.15);
+}
