--- a/components/footer/Footer.scss
+++ b/components/footer/Footer.scss
@@ -14,4 +14,11 @@
       margin-right: 10px;
     }
   }
+
+  button {
+    float: right;
+    margin-right: 15px;
+    position: relative;
+    top: -10px;
+  }
 }
