--- a/pages/Home.scss
+++ b/pages/Home.scss
@@ -3,7 +3,7 @@
 section.Header {
   color: white;
   height: 100vh;
-  background-image: url(https://images.unsplash.com/photo-1493224533326-630c89563300?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=69b043c297cf8557edda53579fe403ed&auto=format&fit=crop&w=1350&q=80);
+  background-image: url(/static/images/bg.jpeg);
   background-size: cover;
 
   .callout {
