--- a/pages/Home.scss
+++ b/pages/Home.scss
@@ -36,7 +36,9 @@ section.AboutMe {
   padding-bottom: 100px;
 }
 
-section.Experience {
+section.Skills {
+  padding-top: 75px;
+  padding-bottom: 75px;
 }
 
 section.CodeSamples {
