Improve portfolio section, add skills.

--- a/components/common/styles/Common.scss
+++ b/components/common/styles/Common.scss
@@ -38,3 +38,7 @@ body {
 .shadow {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.15);
 }
+
+.text-muted {
+  color: #6c757d !important;
+}
