--- a/components/common/cards/PortfolioItem.scss
+++ b/components/common/cards/PortfolioItem.scss
@@ -1,7 +1,7 @@
 .PortfolioItem {
   border-radius: 4px;
   background-color: #fff;
-  height: 300px;
+  min-height: 300px;
   width: 100%;
   margin-bottom: 40px;
 
