--- a/pages/Home.scss
+++ b/pages/Home.scss
@@ -3,7 +3,7 @@
 section.Header {
   color: white;
   height: 100vh;
-  background-image: url(/static/images/bg.jpeg);
+  background-image: url(/static/images/bg2.JPG);
   background-size: cover;
 
   .callout {
