More friendly for mobile.

--- a/components/common/cards/BlogPostCard.scss
+++ b/components/common/cards/BlogPostCard.scss
@@ -1,3 +1,9 @@
 .Blog_item_body {
   font-family: "Oswald", sans-serif;
 }
+
+.Blog_item_title {
+  @media (max-width: 700px) {
+    font-size: 20px;
+  }
+}
