--- a/pages/Home.scss
+++ b/pages/Home.scss
@@ -14,16 +14,28 @@ section.Header {
     color: white;
     display: inline-block;
     font-size: 48px;
+
+    @media (max-width: 700px) {
+      font-size: 30px;
+    }
   }
 
   .my-title {
     color: dodgerblue;
     font-size: 28px;
     display: inline-block;
+
+    @media (max-width: 700px) {
+      font-size: 16px;
+    }
   }
 
   .my-description {
     margin-top: 10px;
+
+    @media (max-width: 700px) {
+      font-size: 14px;
+    }
   }
 
   .my-resume {
