--- a/pages/post.scss
+++ b/pages/post.scss
@@ -10,6 +10,10 @@
       text-align: center;
       font-weight: bold;
       font-size: 42px;
+
+      @media (max-width: 700px) {
+        font-size: 26px;
+      }
     }
 
     .Post_date {
